2007-09-15  Murray Cumming  <murrayc@murrayc.com>

	* glom/main.cc: initialize gtksourceviewmm so that the GType is available 
	to libglade, to avoid a warning (and possibly a crash).

2007-09-15  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_list.cc: create_layout(): Do not try to 
	add the previously-used primary key if there is no primary key in the 
	table (for instance, if there are no fields in the table). This avoids 
	an internal postgres warning about a non-existant field.
	* glom/utility_widgets/db_adddel/db_adddel.cc: Clear the model if there 
	are no fields. This prevents a crash at startup if a table has no fields.

2007-09-14  Armin Burgmeier  <armin@openismus.com>

	* several files: Merged changes from the GLOM_CLIENTONLY branch. This
	adds an --enable-client-only configure option that disables support
	for developer mode and self-hosting. See the ChangeLog in the
	GLOM_CLIENTONLY branch for a detailed list of changes.

2007-09-13  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* glom/layout_item_dialogs/dialog_buttonscript.cc:
	* glom/mode_design/fields/dialog_fieldcalculation.cc:
	* glom/mode_design/script_library/dialog_script_library.cc:
	Ported to the latest gtksourceviewmm, using the gtksourceview-2.0 
	API.

This is svn trunk. See also the glom-1-6 branch.

1.6.0:

2007-09-10  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc:
	* glom/base_db.h: Added a handle_error(Glib::Exception) overload.
	* glom/frame_glom.cc:
	* glom/main.cc:
	* glom/mode_data/box_data_details.cc:
	* glom/mode_data/box_data_list.cc:
	* glom/mode_design/fields/box_db_table_definition.cc:
	* glom/reports/report_builder.cc:
	* glom/utility_widgets/db_adddel/glom_db_treemodel.cc: Catch 
	Glib::Exceptions as well as std::exception, hopefully allowing us to 
	catch more errors without crashing.

2007-09-10  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom_privs.cc: Fix a warning. std::string::find() returns npos, 
	not -1 when it fails.